KAL-16 Add email tracking service
